--- a/src/styles/TodoItem.scss
+++ b/src/styles/TodoItem.scss
@@ -10,7 +10,7 @@
     display: block;
     height: 100%;
     width: 100%;
-    padding: 10px 20px;
+    padding: 10px 50px 10px 20px;
     color: #000;
     cursor: pointer;
   }
