--- a/src/styles/TodoItem.scss
+++ b/src/styles/TodoItem.scss
@@ -6,39 +6,15 @@
     opacity: 1;
   }
 
-  &__label {
-    display: block;
-    height: 100%;
-    width: 100%;
+  &__main {
+    display: flex;
+    align-items: center;
     padding: 10px 50px 10px 20px;
-    color: #000;
     cursor: pointer;
   }
 
-  &__checkbox {
-    & + span:not(.lever) {
-      display: block;
-      height: 100%;
-
-      &:before {
-        box-sizing: border-box;
-        top: calc(50% - 9px);
-        margin-top: 0;
-      }
-    }
-
-    &:not(.filled-in) + span:not(.lever):after {
-      box-sizing: border-box;
-      top: calc(50% - 9px);
-      margin-top: 0;
-    }
-
-    &:checked + span:not(.lever):before {
-      box-sizing: border-box;
-      top: calc(50% - 11px);
-      border-right: 2px solid #42a5f5;
-      border-bottom: 2px solid #42a5f5;
-    }
+  &__text {
+    margin-left: 8px;
   }
 
   &__clear {
@@ -48,5 +24,14 @@
     display: block;
     opacity: 0;
     box-shadow: none;
+  }
+
+  &.done {
+    background: #eeeeee;
+
+    span {
+      color: #9e9e9e;
+      text-decoration: line-through;
+    }
   }
 }
